--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=web_api;trusted_connection=true"
+  },
+  "AppSettings": {
+    "Token":  "my top secret key"
   }
 }
