--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=web_api;trusted_connection=true"
+    //"DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=web_api;trusted_connection=true"
+    "DefaultConnection": "server=localhost; port=3307; database=web_api; user=admin; password=admin; Persist Security Info=False; Connect Timeout=300"
   },
   "AppSettings": {
     "Token":  "my top secret key"
